# mcp-resource-tool-adapter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mcp_resource_tool_adapter/: __init__.py  adapter.py
tests/: test_adapter.py  test_fastmcp_integration.py
