[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mcp-resource-tool-adapter"
version = "0.1.0"
description = "Expose MCP resources through generic tools for tool-only MCP clients."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Vinicius Ferreira" }
]
keywords = [
  "mcp",
  "model-context-protocol",
  "fastmcp",
  "llm",
  "tools",
  "resources",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

dependencies = [
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "twine>=6.0",
]

[project.urls]
Homepage = "https://github.com/vineef/mcp-resource-tool-adapter"
Repository = "https://github.com/vineef/mcp-resource-tool-adapter"
Issues = "https://github.com/vineef/mcp-resource-tool-adapter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_resource_tool_adapter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"